tests/parser/define.6.bad.error
error: Invalid pattern
  --> test:4:12
   |
 4 |  (define (f (0.5) x) 1)
   |              ^^^ invalid constructor in pattern
