tests/parser/define.6.bad.coalton
;; BAD: Define
(package test-parser)

(define (f (0.5) x) 1)
